2013-06-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_CHECK_IO): Check for tempnam.

2013-05-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_HOST_LISP_CPU_PRECISION): Update.
	ECL since 11.1.1 puts relevant information on *FEATURES* list.

2013-04-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* configure.ac: Output src/syntax/Makefile.
	* Makefile.am (OA_SRC_TARGETS): Add all-syntax.

2013-04-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* Makefile.am (OA_SRC_TARGETS): Include all-io.
	* config/depcomp: New.

2013-04-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_REQUIRE_CXX11): New.
	* configure.ac: Use it.
