@@ -1464,8 +1464,14 @@
 ;; -*- Native Datatype correspondance -*-
 ;; 
 
+;; This should be an implementation-independent macro definition,
+;; but GCL has problems with it, for some obscure reasons.
+#-:gcl
 (defmacro |maxIndex| (x)
-  `(1- (length ,x)))
+  `(1- (length ,x))))
+#+:gcl
+(defun |maxIndex| (x)
+  (1- (length x))))
 
 
 ;; Datatype for buffers mostly used for transmitting data between
